# remote-maintenance

./: README.md
maintenance-control/: CMakeLists.txt
maintenance-control/src/: JobMaster.cpp  JobMaster.h  MaintenanceControl.cpp  MaintenanceControl.h  fifo.h  sampleControlApp.cpp
maintenance-module/: CMakeLists.txt
maintenance-module/src/: FileTransfer.cpp  FileTransfer.h  JobSlave.cpp  JobSlave.h  Maintenance.cpp  Maintenance.h  sampleApp.cpp
sharedSrc/: FileTransferJob.h  Filter.h  JobResult.h  NetworkClient.cpp  NetworkClient.h  log.h  network.h  ostream_operator.cpp  serialize.h
